Fix base and index templates a little. Add db.sqlite3 to .gitignore
Fix horizontal scrolling.
Remove margin-bottom from navbar.
Add fer rows, where will be filter and few new buildings.

--- a/real_estate_agency/real_estate/static/real_estate/css/sass/base.scss
+++ b/real_estate_agency/real_estate/static/real_estate/css/sass/base.scss
@@ -1,19 +1,3 @@
-// .navbar {
-// 	.navbar-nav {
-// 	  display: inline-block;
-// 	  float: none;
-// 	  vertical-align: middle;
-// 	}
-// 	li{
-// 		margin: 20px;
-// 	}
-// 	li:hover{
-// 		background-color:red !important;
-// 	}
-// 	a{
-// 		padding: 0px !important;
-// 	}
-// }
 .navbar a{
 	transition: all 0.5s ease;
 }
@@ -24,4 +8,7 @@
 		a{
 			color: white;
 		}
+}
+.navbar{
+	margin-bottom:0;
 }
